--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -1,57 +1,255 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-	<head>
+	<head lang="en">
 		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="description" content=""/>
+		<title>仪器商品列表</title>
 		<meta name="_csrf" th:content="${_csrf.token}" />
-		<meta name="_csrf_parameterName" th:content="${_csrf.parameterName}" />
-		<title>Insert title here</title>
-		<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
-		<script>
-			$(function(){
-				var form=$('form');
+		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+		<link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
+		<script type="text/javascript" th:src="@{/js/jquery-min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/script.js}"></script>
+		<script type="text/javascript">
+            $(function() {
+                var token = $("meta[name='_csrf']").attr("content");
+                var header = $("meta[name='_csrf_header']").attr("content");
+                $(document).ajaxSend(function(e, xhr, options) {
+                    xhr.setRequestHeader(header, token);
+                });
 
-				$('#price a').click(function(event) {
-					event.preventDefault();
-					var self=$(event.target);
-					var fromPrice=self.attr('data-minPrice');
-					var toPrice=self.attr('data-maxPrice');
-					var fromHidden=$('<input name="from" type="hidden" value="'+fromPrice+'"/>');
-					var toHidden=$('<input name="to" type="hidden" value="'+toPrice+'"/>');
-					form.append(fromHidden).append(toHidden);
-					form.submit();
-				});
-				
-				$(':radio,:checkbox').change(function () {
-        			$('form').submit();
-    			});
-			});
+                $('.addCart').click(function() {
+                    var obj = $(this);
+                    var product = obj.attr("data-id");
+                    createCart(1, product);
+                });
+                function coll(productId) {
+                    $.ajax({
+                        type : 'post',
+                        url : '/ajax/preferProduct/' + productId,
+                        success : function(data) {
+                            if (data == "success") {
+                                var coll = $("#coll" + productId);
+                                coll.empty();
+                                var str = '<a class="btn-cancel nocoll" data-id="' + productId + '">取消收藏</a><a class="btn-cart addCart" data-id="' + productId + '">加入购物车</a>';
+                                coll.append(str);
+                            } else {
+                                alert(data);
+                            }
+                        },
+                        error : function(data) {
+                            alert("error")
+                        }
+                    });
+                }
+
+                function nocoll(productId) {
+                    $.ajax({
+                        type : 'delete',
+                        url : '/ajax/preferProduct/' + productId,
+                        success : function(data) {
+                            if (data == "success") {
+                                var coll = $("#coll" + productId);
+                                coll.empty();
+                                var str = '<a class="btn-cancel coll" data-id="' + productId + '">加入收藏</a><a class="btn-cart addCart" data-id="' + productId + '">加入购物车</a>';
+                                coll.append(str);
+                            } else {
+                                alert(data);
+                            }
+                        },
+                        error : function(data) {
+                            alert("error");
+                        }
+                    });
+                }
+
+
+                $(".product").on("click", ".coll", function() {
+                    var obj = $(this);
+                    var productId = obj.attr("data-id");
+                    coll(productId);
+                });
+                $(".product").on("click", ".nocoll", function() {
+                    var obj = $(this);
+                    var productId = obj.attr("data-id");
+                    nocoll(productId);
+                });
+                
+                
+            });
 		</script>
 	</head>
-	</head>
 	<body>
-		<form th:object="${option}">
-			<ul id="firstCategory">
-				<li th:each="c:${firstCategory}">
-					<input type="radio" th:field="*{firstCategory}" th:value="${c.name}" th:text="${c.name}"/>
-				</li>
-			</ul>
-			<ul id="price">
-				<li>
-					<a data-minPrice="1" data-maxPrice="10" th:class="*{from==1 and to==10}?active:''" href="#">1~10</a>
-				</li>
-				<li>
-					<a data-minPrice="11" data-maxPrice="20" href="#">11~20</a>
-				</li>
-			</ul>
-		</form>
+
 		<div>
-			<ul>
-				<li th:each="l:${lists}">
-					<div th:text="${l.title}"></div>
-				</li>
-			</ul>
+			<div th:include="head/head :: head">
+				Head
+			</div>
 		</div>
-		<div th:replace="fragments/page::page(viewpage=${viewpage})"></div>
+		<!-- header -->
+		<div class="wrapper">
+			<div class="crumb">
+				<a href="/index">首页</a>
+				<i>></i>
+				<i>></i>
+			</div>
+			<div class="gray-hd">
+				<a class="blue ft14">生物芯片</a>
+				<span>筛选商品 共<i>1222</i>件商品</span>
+			</div>
+			<div class="sort-group">
+				<div class="selected">
+					<label>筛选：</label>
+					<a class="sel-tag"> 类型：生物芯片 <span class="icon-del"></span> </a>
+					<a class="sel-tag"> 品牌：生物芯片 <span class="icon-del"></span> </a>
+				</div>
+				<ul>
+					<li>
+						<label><b>类型：</b></label>
+						<div class="items pack">
+							<a>生物芯片</a>
+							<a>芯描仪</a>
+							<a>生片</a>
+							<a>芯片扫描仪</a>
+							<a>生物芯片</a>
+							<a>描仪</a>
+							<a>生物芯片</a>
+							<a>描仪</a>
+							<a>生物芯片</a>
+							<a>扫描仪</a>
+							<a>生物芯片</a>
+							<a>芯片扫描仪</a>
+							<a>生物芯片</a>
+							<a>描仪</a>
+							<a>生物芯片</a>
+							<a>芯仪</a>
+							<a>生物芯片</a>
+							<a>扫描仪</a>
+						</div>
+						<div class="more-items">
+							<a> 更多 </a>
+							<i class="expand-btn"></i>
+						</div>
+					</li>
+					<li>
+						<label><b>品牌：</b></label>
+						<div class="items">
+							<div th:each="brand:${brands}">
+								<label th:text="${brand.name}"></label>
+								<input type="radio" th:field="*{brand}"/>
+							</div>
+						</div>
+					</li>
+					<li>
+						<label><b>产地：</b></label>
+						<div class="items">
+							<a>国产</a>
+							<a>进口</a>
+						</div>
+					</li>
+					<li>
+						<label><b>价格：</b></label>
+						<div class="items">
+							<a>1-3万</a>
+							<a>5-7万</a>
+							<a>1-3万</a>
+							<a>5-7万</a>
+							<a>1-30万</a>
+							<a>5-7万</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="items-search">
+				<label><b>标签：</b></label>
+				<input type="text" class="bodr"/>
+				<button>
+					搜索
+				</button>
+			</div>
+			<div class="filter">
+				<a class="price">价格<i></i></a>
+				<a>评论数</a>
+				<a>上架时间</a>
+			</div>
+			<div class="items-list pro-list">
+				<ul>
+					<li class="bodr product" th:each="product:${products.content}" >
+						<a th:href="@{'/products/'+${product.id}}"> 
+							<img th:src="@{${product.imgurl}}" width="210" height="175"/>
+						</a>
+						<div class="pic-box">
+							<div class="pic-row refer">
+								<label>参考报价</label>
+								<span> <b class="red ft14">￥<i th:text="${product.price}"></i></b> </span>
+							</div>
+							<div class="pic-row tit" th:text="${product.title}"></div>
+							<div class="pic-row">
+								<label>品牌：</label>
+								<span th:text="${product.brand}"></span>
+							</div>
+							<div class="pic-row">
+								<label >产地：</label>
+								<span th:text="${product.original}"></span>
+							</div>
+							<div class="pic-row">
+								<label>型号：</label>
+								<span th:text="${product.model}"></span>
+							</div>
+							<div class="pic-row comment">
+							</div>
+							<div class="pic-row bodr" th:id="'coll'+${product.id}">
+								<a class="btn-cancel coll" th:attr="data-id=${product.id}">加入收藏</a>
+								<a class="btn-cart addCart" th:attr="data-id=${product.id}">加入购物车</a>
+							</div>
+						</div> 
+					</li>
+				</ul>
+			</div>
+			<div class="pagination">
+				<div class="l-pagination">
+					<ul>
+						<li>
+							<a href="">首页</a>
+						</li>
+						<li>
+							<a href="">1</a>
+						</li>
+						<li class="active">
+							<a href="">2</a>
+						</li>
+						<li>
+							<a href="">3</a>
+						</li>
+						<li>
+							<a href="">4</a>
+						</li>
+						<li>
+							……
+						</li>
+						<li>
+							<a href="">40</a>
+						</li>
+						<li>
+							<a href="">尾页</a>
+						</li>
+					</ul>
+					<div class="page-total">
+						共40页
+					</div>
+					<div class="page-from">
+						<span>到第</span>
+						<input type="text" class="page-input" />
+						<span>页</span>
+						<button>
+							确定
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer">
+			© 1998 - 2015 SJ Inc. All Rights Reserved
+		</div>
 	</body>
 </html>
