--- a/admin/src/main/resources/templates/subject/solution/list.html
+++ b/admin/src/main/resources/templates/subject/solution/list.html
@@ -16,6 +16,6 @@
             </tr>
         </tbody>
         <input ng-model="solution.name"></input>
-        <button ng-click="add()">add</button>
+        <button ng-click="add()">添加</button>
     </table>
 </div>
