修复commonUsercontroller中url错误

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 </script>
 </head>
 <body>
-	<div th:include="head/head :: head">Head</div>
+	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="screen-one clearfix">
