--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -240,7 +240,7 @@
 			<div class="form-group files">
 				<label><i>*</i>企业营业执照上传</label>
 				<img th:src="*{businessLicenseUrl}" width="100" height="100"/>
-				<button id="uploadImg">
+				<button id="uploadImg" type="button">
                     <input type='file' name='file' th:attr="data-url=@{businessLicenseUrl}"/>
                     <a href="#">选择文件</a>
                 </button>	
@@ -250,7 +250,7 @@
 			<div class="form-group files">
 				<label><i>*</i>税务登记证上传</label>
 				<img th:src="*{taxRegistrationUrl}" width="100" height="100"/>
-				<button id="uploadImg">
+				<button id="uploadImg" type="button">
                     <input type='file' name='file' th:attr="data-url=@{taxRegistrationUrl}"/>
                     <a href="#">选择文件</a>
                 </button>				
@@ -260,7 +260,7 @@
 			<div class="form-group files">
 				<label><i>*</i>组织结构代码证上传</label>
 				<img th:src="*{structureCodeUrl}" width="100" height="100"/>
-				<button id="uploadImg">
+				<button id="uploadImg" type="button">
                     <input type='file' name='file' th:attr="data-url=@{structureCodeUrl}"/>
                     <a href="#">选择文件</a>
                 </button>		
