修改仪器列表页

--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -106,7 +106,7 @@
 				<form>
 					<div class="search-select">					
 						<label><b>类型：</b></label>
-						<ul class="list-inline pack">
+						<ul class="list-inline">
 							<li class="active">
 								<input type="radio" name="radio" />
 								<label>生物芯片</label>
@@ -181,7 +181,7 @@
 								<input type="radio" name="radio" />
 								<label>生物芯片</label>
 							</li>
-							<li>
+							<li class="active">
 								<input type="radio" name="radio" />
 								<label>生物芯片</label>
 							</li>
