--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div class="head-box clearfix">
-			<a href="#" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
+			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 			<div class="head-menu-btn resg-self">
 				<a class="self-btn"></a>
 				<a href="/signup?provider" class="company-btn"></a>
