--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -118,7 +118,7 @@
 			</div>
 		</div>
 		<div class="head-box clearfix">
-			<a href="#" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
+			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 			<div class="head-menu-btn resg-company">
 				<a href="/signup?user" class="self-btn"></a>
 				<a class="company-btn"></a>
