--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -215,7 +215,7 @@ table{
 	border-left: 1px solid #ffbe26;
 	border-right: 1px solid #ffbe26;
 }
-.head-box .head-search i.icon-search{
+.head-box .head-search input.icon-search{
 	display: block;
 	position: absolute;
 	right: 12px;
@@ -223,6 +223,7 @@ table{
 	width: 25px;
 	height: 20px;
 	background: url('../img/icon-search.png') no-repeat;
+	border:none;
 }
 .head-menu{
 	float: right;
