--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -5,7 +5,7 @@
 			<div class="head-search">
 				<span class="searched">商品</span>
 				<input type="text"/>
-				<i class="icon-search"></i>
+				<input class="icon-search" type="submit" value="" />
 				<div class="search-sort">
 					<a>商品</a>
 					<a>型号</a>
