--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -28,7 +28,7 @@
                 	});
                 	if(checksVal.length!=0){
                 	$.ajax({
-                		url : "/ajax/carts",
+                		url : "/ajax/carts?multiple",
                 		type : "post",
                 		traditional:true,
                 		dataType:"json",
