--- a/web/src/main/resources/templates/user/common/buys.html
+++ b/web/src/main/resources/templates/user/common/buys.html
@@ -46,7 +46,7 @@
 				<div class="aside fl">
 					<a href="/user/detail">个人资料</a>
 					<a href="/user/collection">收藏夹</a>
-					<a href="/user/cart">购物车</a>
+					<a href="/user/carts">购物车</a>
 					<a class="active">采购申请</a>
 				</div>
 				<div class="mainpanel purchase fr">
