--- a/web/src/main/resources/templates/user/common/modifyBuy.html
+++ b/web/src/main/resources/templates/user/common/modifyBuy.html
@@ -35,7 +35,7 @@
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
 					<a href="/user/detail">个人资料</a> <a href="/user/collection">收藏夹</a>
-					<a href="/user/cart">购物车</a> <a class="active" href="/user/buyRecords">采购申请</a>
+					<a href="/user/carts">购物车</a> <a class="active" href="/user/buyRecords">采购申请</a>
 				</div>
 				<div class="mainpanel bodr fr">
 				<div class="pdf " th:object="${buy}">
