--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -240,7 +240,7 @@
 			<div class="form-group files">
 				<label><i>*</i>企业营业执照上传</label>
 				<img th:src="*{businessLicenseUrl}" width="100" height="100"/>
-				<button id="uploadImg" type="button">
+				<button id="uploadImg" >
                     <input type='file' name='file' th:attr="data-url=@{businessLicenseUrl}"/>
                     <a href="#">选择文件</a>
                 </button>	
