--- a/web/src/main/resources/templates/cart/list.html
+++ b/web/src/main/resources/templates/cart/list.html
@@ -20,7 +20,7 @@
 					var self = $(this);
 					var id = self.attr('data-id');
 					$.ajax({
-						url : '/user/cart/' + id,
+						url : '/user/carts/' + id,
 						method : 'delete'
 					});
 				});
