--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -18,24 +18,6 @@
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
 			});
-			$(".delete").click(function(){
-				var obj = $(this);
-				var productId = obj.attr('data-id');
-		    	$.ajax({
-		    		type:"delete",
-		    		url :'/user/cart/'+productId,
-		    		success:function(data){
-		    			$("#cart"+productId).remove();
-		    			var allNum = $("#allNum");
-		            	allNum.html(parseInt(allNum.html())-1);
-		            	var totalNum =$("#totalNum");
-		            	totalNum.html(parseInt(totalNum.html())-1);
-		            	$("#"+productId).remove();
-		    		},error:function(data){
-		    			alert("error");
-		    		}
-		    	});
-			});
 		});
 	</script>
 </head>
@@ -71,8 +53,8 @@
 							</thead>
 							<tbody>
 								<tr th:if="${list!=null}" th:each="cart:${list}" th:id="${cart.productId}" th:attr="data-id=${cart.id}">
-									<td><input type="checkbox"  class="check" th:if="${cart.check==false}" id="products" name="products" th:value="${cart.productId}" th:attr="data-id=${cart.id}"/>
-									<input type="checkbox" checked="checked"  class="check" th:if="${cart.check==true}" id="products" name="products" th:value="${cart.id}" th:attr="data-id=${cart.id}"/></td>
+									<td><input type="checkbox"  class="check" th:if="${cart.check==false}" id="carts" name="carts" th:value="${cart.productId}" th:attr="data-id=${cart.id}"/>
+									<input type="checkbox" checked="checked"  class="check" th:if="${cart.check==true}" id="carts" name="carts" th:value="${cart.productId}" th:attr="data-id=${cart.id}"/></td>
 									<td>
 										<img th:src="@{${cart.image}}" width="80" height="80"/>
 									</td>
@@ -100,7 +82,7 @@
 									<td>
 										<div class="amount">
 											<a class="minus" th:attr="data-id=${cart.productId},cart-id=${cart.id}">-</a>
-											<input type="text" class="text-amount" th:value="${cart.number}" th:id="'num'+${cart.productId}" th:attr="cart-id=${cart.id},price=${cart.price},product-id=${cart.productId}"/>
+											<input type="text" class="text-amount" th:value="${cart.number}" th:id="'num'+${cart.productId}" onkeyup="this.value=this.value.replace(/\D/g,'')"  onafterpaste="this.value=this.value.replace(/\D/g,'')" th:attr="cart-id=${cart.id},price=${cart.price},product-id=${cart.productId}"/>
 											<a class="plus" th:attr="data-id=${cart.productId},cart-id=${cart.id},price=${cart.price}">+</a>
 										</div>
 									</td>
@@ -114,7 +96,7 @@
 						<div class="cart-foot">
 							<div class="clearfix">
 								<span class="choose"><input type="checkbox" id="checkAll"/>全选</span>								
-								<span class="del"><a>删除</a></span>
+								<span class="del"></span>
 								<span class="num">已选好<b class="red" id="num"></b>种商品</span>
 								<span>合计：<b  class="red">￥</b><b class="red" id="count"></b></span>
 								<button th:if="${list==null}" class="btn green fr make-orders" disabled="disabled">生成采购订单</button>
