--- a/web/src/main/resources/templates/user/common/collection.html
+++ b/web/src/main/resources/templates/user/common/collection.html
@@ -56,14 +56,14 @@
 					<div class="aside fl">
 						<a href="/user/detail">个人资料</a>
 						<a class="active">收藏夹</a>
-						<a href="/user/cart">购物车</a>
+						<a href="/user/carts">购物车</a>
 						<a href="/user/buyRecords">采购申请</a>
 					</div>
 					<div class="mainpanel bodr collect fr">
 						<div class="items-list">
 							<ul>
 								<li class="bodr" th:each="prefer:${pages.getContent()}" th:id="'li'+${prefer.product.id}">
-									<a th:href="@{'/products/'+${prefer.product.id}}"><img th:src="@{${prefer.product.coverImg}}" width="210" height="175"/>
+									<a th:href="@{'/products/'+${prefer.product.id}}" target="_blank"><img th:src="@{${prefer.product.coverImg}}" width="210" height="175"/>
 									<div class="pic-box">
 										<div class="pic-row refer">
 											<label>参考报价</label>
