--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -35,7 +35,7 @@
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
 					<a href="/user/detail">个人资料</a> <a href="/user/collection">收藏夹</a>
-					<a href="/user/cart">购物车</a> <a class="active" href="/user/buyRecords">采购申请</a>
+					<a href="/user/carts">购物车</a> <a class="active" href="/user/buyRecords">采购申请</a>
 				</div>
 					<div class="mainpanel bodr fr">
 				<div class="pdf " th:object="${buy}">
@@ -102,7 +102,7 @@
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 								<button class="btn green mauto">生成完毕</button>
-								<a href="/user/cart"><button class="btn green mauto" type="button">取消</button></a>
+								<a href="/user/carts"><button class="btn green mauto" type="button">取消</button></a>
 							</form>
 						</div>
 					</div>
