--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -1,136 +1,167 @@
-	<div th:fragment="head" class="header" >
-		<div class="head-box clearfix">
+<div th:fragment="head" class="header" >
+	<div class="head-box clearfix">
 		<script type="text/javascript" th:src="@{/js/script.js}"></script>
-			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
-			<div class="head-search">
+		<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
+		<div class="head-search">
+			<form id="searchForm" action="/products/_search">
 				<span class="searched">商品</span>
-				<input type="text"/>
+				<input type="text" name="title" id="searchText"/>
 				<i class="icon-search"></i>
 				<div class="search-sort">
-					<a>商品</a>
-					<a>型号</a>
-					<a>品牌</a>
-					<a>专题</a>
-					<a>资讯</a>
+					<a data-name="/products/_search" data-input="title">商品</a>
+					<a data-name="/products/_search" data-input="model">型号</a>
+					<a data-name="/products/_search" data-input="brand">品牌</a>
+					<a >专题</a>
+					<a >资讯</a>
 				</div>
-			</div>
-			<div class="head-menu"  th:if="${session.SPRING_SECURITY_CONTEXT==null}">
-				<a href="/login">登录</a>
-				<span>|</span>
-				<a href="/signup?user">注册</a>
-			</div>
-			<div class="head-dorpdown" th:unless="${session.SPRING_SECURITY_CONTEXT==null}">
+			</form>
+		</div>
+		<div class="head-menu"  th:if="${session.SPRING_SECURITY_CONTEXT==null}">
+			<a href="/login">登录</a>
+			<span>|</span>
+			<a href="/signup?user">注册</a>
+		</div>
+		<div class="head-dorpdown" th:unless="${session.SPRING_SECURITY_CONTEXT==null}">
 			<script type="text/javascript" th:src="@{/js/headCart.js}"></script>
-				<div class="head-cart" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-					<div class="ct-cart">购物车(<i th:if="${session.cartLines==null}" th:text="0" id="allNum"></i><i th:if="${session.cartLines!=null}" th:text="${session.cartLines.size()}" id="allNum"></i>)</div>
-					<div class="ct-cart-wrap bodr hide" >
-						<h3><b class="gray-deeply" >最近加入的商品</b></h3>
-						<div class="ct-cart-list"  >
-							<ul id="cartUl">
-								<li th:each="cartline:${session.cartLines}" th:id="'cart'+${cartline.productId}">
-									<div class="fl ct-img">
-										<a th:href="'/products/'+${cartline.productId}"><img th:src="@{${cartline.image}}" width="50" height="50"/></a>
-									</div>
-									<div class="fl ct-name">										
-										<a th:text="${cartline.name}" th:href="'/products/'+${cartline.productId}"></a>
-									</div>
-									<div class="fr ct-detail">
-										<span class="ct-price">
-											<b th:text="${cartline.price}"></b>×<i th:id="'cartNumber'+${cartline.productId}" th:text="${cartline.number}"></i>
-										</span>
-										<br/>
-										<a class="fr cartRemove"  th:attr="data-id=${cartline.productId}">删除</a>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="ct-total">
-						共<b th:if="${session.cartLines==null}" th:text="0" id="totalNum"></b><b th:if="${session.cartLines!=null}" th:text="${session.cartLines.size()}" id="totalNum"></b>种商品
-							<a class="go-cart" href="/user/cart">去购物车</a>
-						</div>
-					</div>
+			<div class="head-cart" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+				<div class="ct-cart">
+					购物车(<i th:if="${session.cartLines==null}" th:text="0" id="allNum"></i><i th:if="${session.cartLines!=null}" th:text="${session.cartLines.size()}" id="allNum"></i>)
 				</div>
-				<div class="head-user">
-					<div class="user-name" id="username"  th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></div>
-					<div class="user-menu bodr">
-						<ul>
-							<li th:unless="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-								<a href="/supplier/detail">个人中心</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-								<a href="/user/detail">个人中心</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-								<a href="/user/collection">收藏夹</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-								<a href="/user/cart">我的购物车</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-								<a href="/user/buyRecords">我的采购申请</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-								<a href="/provider/products?form">商品发布</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-								<a href="/provider/products">商品维护</a>
-							</li>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-								<a href="/provider/count">商品信息统计</a>
-							</li>
-							<li>
-								<a>退出登录</a>
+				<div class="ct-cart-wrap bodr hide" >
+					<h3><b class="gray-deeply" >最近加入的商品</b></h3>
+					<div class="ct-cart-list"  >
+						<ul id="cartUl">
+							<li th:each="cartline:${session.cartLines}" th:id="'cart'+${cartline.productId}">
+								<div class="fl ct-img">
+									<a th:href="'/products/'+${cartline.productId}"><img th:src="@{${cartline.image}}" width="50" height="50"/></a>
+								</div>
+								<div class="fl ct-name">
+									<a th:text="${cartline.name}" th:href="'/products/'+${cartline.productId}"></a>
+								</div>
+								<div class="fr ct-detail">
+									<span class="ct-price"> <b th:text="${cartline.price}"></b>×<i th:id="'cartNumber'+${cartline.productId}" th:text="${cartline.number}"></i> </span>
+									<br/>
+									<a class="fr cartRemove"  th:attr="data-id=${cartline.productId}">删除</a>
+								</div>
 							</li>
 						</ul>
 					</div>
+					<div class="ct-total">
+						共<b th:if="${session.cartLines==null}" th:text="0" id="totalNum"></b><b th:if="${session.cartLines!=null}" th:text="${session.cartLines.size()}" id="totalNum"></b>种商品 <a class="go-cart" href="/user/cart">去购物车</a>
+					</div>
+				</div>
+			</div>
+			<div class="head-user">
+				<div class="user-name" id="username"  th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></div>
+				<div class="user-menu bodr">
+					<ul>
+						<li th:unless="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+							<a href="/supplier/detail">个人中心</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+							<a href="/user/detail">个人中心</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+							<a href="/user/collection">收藏夹</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+							<a href="/user/cart">我的购物车</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+							<a href="/user/buyRecords">我的采购申请</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
+							<a href="/provider/products?form">商品发布</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
+							<a href="/provider/products">商品维护</a>
+						</li>
+						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
+							<a href="/provider/count">商品信息统计</a>
+						</li>
+						<li>
+							<a>退出登录</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="head-nav">
-			<div class="nav-box">
-				<ul th:if="${pc!=null}">
-					<li th:if="${pc.name=='仪器'}" class="active nobor"><a href="/productCategory/仪器">仪器</a></li>
-					<li th:unless="${pc.name=='仪器'}"><a href="/productCategory/仪器">仪器</a></li>
-					<li th:if="${pc.name=='试剂'}" class="active nobor"><a href="/productCategory/试剂">试剂</a></li>
-					<li th:unless="${pc.name=='试剂'}"><a href="/productCategory/试剂">试剂</a></li>
-					<li th:if="${pc.name=='耗材'}" class="active nobor"><a href="/productCategory/耗材">耗材</a></li>
-					<li th:unless="${pc.name=='耗材'}"><a href="/productCategory/耗材">耗材</a></li>
-					<li th:if="${pc.name=='服务'}" class="active nobor"><a href="/productCategory/服务">服务</a></li>
-					<li th:unless="${pc.name=='服务'}"><a href="/productCategory/服务">服务</a></li>
-					<li th:if="${pc.name=='专题'}" class="active nobor"><a href="/subjects">专题</a></li>
-					<li th:unless="${pc.name=='专题'}"><a href="/subjects">专题</a></li>
-					<li class="news-down active nobor" th:if="${pc.name=='资讯'}">
-						<a >资讯</a>
-						<div class="news-sort hide">
-							<a href="/informationCategorys/行业要闻">行业要闻</a>
-							<a href="/informationCategorys/新品成果">新品成果</a>
-							<a href="/informationCategorys/厂商动态">厂商动态</a>
-						</div>
-					</li>
-					<li class="news-down" th:unless="${pc.name=='资讯'}">
-						<a >资讯</a>
-						<div class="news-sort hide">
-							<a href="/informationCategorys/行业要闻">行业要闻</a>
-							<a href="/informationCategorys/新品成果">新品成果</a>
-							<a href="/informationCategorys/厂商动态">厂商动态</a>
-						</div>
-					</li>
-				</ul>
-				<ul th:unless="${pc!=null}">
-					<li><a href="/productCategory/仪器">仪器</a></li>
-					<li><a href="/productCategory/试剂">试剂</a></li>
-					<li><a href="/productCategory/耗材">耗材</a></li>
-					<li><a href="/productCategory/服务">服务</a></li>
-					<li><a href="/subjects">专题</a></li>
-					<li class="news-down">
-						<a >资讯</a>
-						<div class="news-sort hide">
-							<a href="/informationCategorys/行业要闻">行业要闻</a>
-							<a href="/informationCategorys/新品成果">新品成果</a>
-							<a href="/informationCategorys/厂商动态">厂商动态</a>
-						</div>
-					</li>
-				</ul>
-			</div>
+	</div>
+	<div class="head-nav">
+		<div class="nav-box">
+			<ul th:if="${pc!=null}">
+				<li th:if="${pc.name=='仪器'}" class="active nobor">
+					<a href="/productCategory/仪器">仪器</a>
+				</li>
+				<li th:unless="${pc.name=='仪器'}">
+					<a href="/productCategory/仪器">仪器</a>
+				</li>
+				<li th:if="${pc.name=='试剂'}" class="active nobor">
+					<a href="/productCategory/试剂">试剂</a>
+				</li>
+				<li th:unless="${pc.name=='试剂'}">
+					<a href="/productCategory/试剂">试剂</a>
+				</li>
+				<li th:if="${pc.name=='耗材'}" class="active nobor">
+					<a href="/productCategory/耗材">耗材</a>
+				</li>
+				<li th:unless="${pc.name=='耗材'}">
+					<a href="/productCategory/耗材">耗材</a>
+				</li>
+				<li th:if="${pc.name=='服务'}" class="active nobor">
+					<a href="/productCategory/服务">服务</a>
+				</li>
+				<li th:unless="${pc.name=='服务'}">
+					<a href="/productCategory/服务">服务</a>
+				</li>
+				<li th:if="${pc.name=='专题'}" class="active nobor">
+					<a href="/subjects">专题</a>
+				</li>
+				<li th:unless="${pc.name=='专题'}">
+					<a href="/subjects">专题</a>
+				</li>
+				<li class="news-down active nobor" th:if="${pc.name=='资讯'}">
+					<a >资讯</a>
+					<div class="news-sort hide">
+						<a href="/informationCategorys/行业要闻">行业要闻</a>
+						<a href="/informationCategorys/新品成果">新品成果</a>
+						<a href="/informationCategorys/厂商动态">厂商动态</a>
+					</div>
+				</li>
+				<li class="news-down" th:unless="${pc.name=='资讯'}">
+					<a >资讯</a>
+					<div class="news-sort hide">
+						<a href="/informationCategorys/行业要闻">行业要闻</a>
+						<a href="/informationCategorys/新品成果">新品成果</a>
+						<a href="/informationCategorys/厂商动态">厂商动态</a>
+					</div>
+				</li>
+			</ul>
+			<ul th:unless="${pc!=null}">
+				<li>
+					<a href="/productCategory/仪器">仪器</a>
+				</li>
+				<li>
+					<a href="/productCategory/试剂">试剂</a>
+				</li>
+				<li>
+					<a href="/productCategory/耗材">耗材</a>
+				</li>
+				<li>
+					<a href="/productCategory/服务">服务</a>
+				</li>
+				<li>
+					<a href="/subjects">专题</a>
+				</li>
+				<li class="news-down">
+					<a >资讯</a>
+					<div class="news-sort hide">
+						<a href="/informationCategorys/行业要闻">行业要闻</a>
+						<a href="/informationCategorys/新品成果">新品成果</a>
+						<a href="/informationCategorys/厂商动态">厂商动态</a>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</div>
+</div>
