修改admin中的英文按钮为中文

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
     <header>
         <div class="headerwrapper">
             <div class="header-left">
-                海申捷卫生科技管理系统
+             	  上海申捷卫生科技管理系统
             </div>
             <div class="header-right">
                 <a>admin</a>
@@ -66,7 +66,7 @@
                         <a ui-sref="category">商品分类管理</a>
                     </li>
                     <li>
-                        <a ui-sref="products">products</a>
+                        <a ui-sref="products">商品管理</a>
                     </li>
                     <li>
                         <a ui-sref="advertise">广告发布</a>
@@ -75,7 +75,7 @@
                         <a ui-sref="info">信息发布</a>
                     </li>
                     <li>
-                        <a ui-sref="subject">subject</a>
+                        <a ui-sref="subject">专题</a>
                     </li>
                     <li>
                         <a href="customer.html">客户行为统计</a>
