--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="modal-footer">
                     <input type="submit" class="btn btn-primary" value="提交" ng-click="submit()" />
-                    <button ng-click="addSolution()">add</button>
+                    <button ng-click="addSolution()">添加解决方案</button>
                 </div>
             </form>
         </div>
