--- a/admin/src/main/resources/templates/user/provider.html
+++ b/admin/src/main/resources/templates/user/provider.html
@@ -6,7 +6,7 @@
                 <option value="ROLE_PROVIDER">已审核</option>
                 <option value="ROLE_UNAUTH">未审核</option>
             </select>
-            <button ng-click="search()">search</button>
+            <button ng-click="search()">搜索</button>
         </div>
     </form>
     <table class="table table-bordered mb30">
