--- a/admin/src/main/resources/templates/product/list.html
+++ b/admin/src/main/resources/templates/product/list.html
@@ -20,14 +20,14 @@
         </div>
         <div class="form-group company-select">
             <select ng-model="opt.status">
-                <option value="1">down</option>
-                <option value="2">up</option>
-                <option value="3">ex</option>
-                <option value="4">not</option>
+                <option value="1">已下架</option>
+                <option value="2">已上架</option>
+                <option value="3">审核中</option>
+                <option value="4">未通过</option>
             </select>
         </div>
         <div class="form-group company-select">
-            <button ng-click="search()">search</button>
+            <button ng-click="search()">搜索</button>
         </div>
     </form>
     <table class="table table-bordered mb30">
