--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -44,7 +44,7 @@
                     <input type="submit" id="submit" class="btn btn-primary" value="提交" />
                     <button ng-click="addSolution()" class="btn btn-primary">添加</button>
                 </div>
-                <a th:attr="href=@{#/subject/__${id}__/solutions}">link</a>
+                <a th:attr="href=@{#/subject/__${id}__/solutions}">返回</a>
             </form>
         </div>
     </div>
