--- a/admin/src/main/resources/templates/subject/solution/list.html
+++ b/admin/src/main/resources/templates/subject/solution/list.html
@@ -12,7 +12,7 @@
             <tr ng-repeat="item in items">
                 <td><a href="#/subjectDetail/{{item.id}}">{{$index+1}}</a></td>
                 <td><input type="text" ng-model="item.name"/></td>
-                <td><button ng-click="update(item)">update</button></td>
+                <td><button ng-click="update(item)">修改</button></td>
             </tr>
         </tbody>
         <input ng-model="solution.name"></input>
