--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -11,7 +11,7 @@
             </select>
         </div>
     </form>
-    <table class="table table-bordered">
+    <table class="table table-bordered sm-ml">
         <thead>
             <tr>
                 <th>序号</th>
