--- a/admin/src/main/resources/templates/advertisement/advertisement.html
+++ b/admin/src/main/resources/templates/advertisement/advertisement.html
@@ -12,7 +12,7 @@
             </select>
         </div>
     </form>
-    <table class="table table-bordered">
+    <table class="table table-bordered sm-ml">
         <thead>
             <tr>
                 <th>序号</th>
@@ -20,6 +20,7 @@
                 <th>链接</th>
                 <th>状态</th>
                 <th>最后修改日期</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
@@ -31,7 +32,7 @@
                 <td>{{item.updatedTime}}</td>
                 <td>
                     <a class="btn btn-primary btn-sm">发布</a>
-                    <a class="btn btn-primary btn-sm">修改</a>
+                    <a class="btn btn-default btn-sm">修改</a>
                 </td>
             </tr>
         </tbody>
