--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -1,29 +1,29 @@
 <div class="contentpanel">
-    <form class="form-horizontal w300">
+    <form class="form-horizontal">
         <div class="row">
             <div class="form-group">
-                <label class="control-label col-sm-2">标题</label>
-                <div class="col-sm-10">
+                <label class="control-label col-sm-1">标题</label>
+                <div class="col-sm-3">
                     <input type="text" class="form-control" ng-model="item.title"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">分类</label>
-                <div class="col-sm-6">
-                    <select ng-model="item.category" ng-options="c.id as c.name for c in categories">
+                <label class="control-label col-sm-1">分类</label>
+                <div class="col-sm-3">
+                    <select ng-model="item.category" ng-options="c.id as c.name for c in categories" class="form-control">
                     </select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">图片</label>
+                <label class="control-label col-sm-1">图片</label>
                 <div class="col-sm-10">
                     <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
                 </div>
             </div>
         </div>
-        <div>
-            <button type="button" class="btn btn-primary" ng-click="submit()">
-                提交
+        <div class="panel-footer">
+            <button type="button" class="btn btn-primary col-xs-offset-4 " ng-click="submit()">
+               	 提交
             </button>
         </div>
     </form>
