--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -1,54 +1,89 @@
-<div class="modal-content">
-    <div class="modal-body">
-        <div class="contentpanel">
-            <form class="form-horizontal w300" ng-submit="submit()" th:object="${subject}">
-                <div class="row">
-                    <div class="form-group">
-                        <label class="control-label col-sm-2">标题</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{name}" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2">图片</label>
-                        <div class="col-sm-6">
-                            <textarea th:field="*{content.content}"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <table th:each="sl:*{solutions}">
-                            <tr th:text="${sl.name}">
-                            </tr>
-                            <tr th:each="p:${sl.products}">
-                                <td th:text="${p.name}"></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div ng-repeat="s in item.solutions">
-                        <input type="text" />
-                    </div>
-                </div>
-                <div class="ul-list">
-                	<ul>
-                		<li>111222</li>
-                		<li>3232323</li>
-                		<li>111222</li>
-                		<li>3232323</li>
-                		<li>111222</li>
-                		<li>3232323</li>
-                		<li>111222</li>
-                		<li>3232323</li>
-                	</ul>
-                </div>
-                <div class="modal-footer">
-                    <input type="submit" id="submit" class="btn btn-primary" value="提交" />
-                    <button ng-click="addSolution()" class="btn btn-primary">添加</button>
-                </div>
-                <a th:attr="href=@{#/subject/__${id}__/solutions}">link</a>
-            </form>
-        </div>
-    </div>
-</div>
+ <div class="contentpanel">
+     <form class="form-horizontal" ng-submit="submit()" th:object="${subject}">
+         <div class="row">
+             <div class="form-group">
+                 <label class="control-label col-sm-1">标题</label>
+                 <div class="col-sm-4">
+                     <input type="text" class="form-control" th:field="*{name}" />
+                 </div>
+             </div>
+             <div class="form-group">
+                 <label class="control-label col-sm-1">图片</label>
+                 <div class="col-sm-6">
+                     <textarea th:field="*{content.content}"></textarea>
+                 </div>
+             </div>
+             <div class="form-group">
+                 <table th:each="sl:*{solutions}">
+                     <tr th:text="${sl.name}">
+                     </tr>
+                     <tr th:each="p:${sl.products}">
+                         <td th:text="${p.name}"></td>
+                     </tr>
+                 </table>
+             </div>
+             <div ng-repeat="s in item.solutions">
+                 <input type="text" />
+             </div>
+         </div>
+         <div class="form-group">
+	          <label class="control-label col-sm-1">解决方案1</label>
+	          <div class="col-sm-6">
+	          	<table class="table table-bordered">
+				    <thead>
+				        <tr>
+				            <th>名称</th>
+				            <th>操作</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <td> ffffffffffffffffff</td>
+				            <td>
+				            		<a class="btn btn-primary btn-sm">删除</a>
+				            </td>
+				        </tr>
+				        <tr>
+				        		<td>解决方案1</td>
+				        		<td>删除</td>
+				        </tr>
+				    </tbody>
+				</table>
+	          </div>
+     	 </div>
+     	 <div class="form-group">
+	          <label class="control-label col-sm-1">解决方案2</label>
+	          <div class="col-sm-6">
+	          	<table class="table table-bordered">
+				    <thead>
+				        <tr>
+				            <th>名称</th>
+				            <th>操作</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <td> ffffffffffffffffff</td>
+				            <td>
+				            		<a class="btn btn-primary btn-sm">删除</a>
+				            </td>
+				        </tr>
+				        <tr>
+				        		<td>解决方案1</td>
+				        		<td>删除</td>
+				        </tr>
+				    </tbody>
+				</table>
+	          </div>
+     	 </div>
+         <div class="col-xs-offset-3 panel-footer">
+             <input type="submit" id="submit" class="btn btn-primary" value="提交" />
+             <button ng-click="addSolution()" class="btn btn-primary">添加</button>
+             <a th:attr="href=@{#/subject/__${id}__/solutions}" class="btn btn-default">返回</a>
+         </div>
+         
+     </form>
+ </div>
 <script>
 $(function() {
     $('textarea').ckeditor({
