--- a/admin/src/main/resources/templates/subject/solution/create.html
+++ b/admin/src/main/resources/templates/subject/solution/create.html
@@ -1,12 +1,15 @@
-<div class="modal-dialog w700" role="document">
+<div class="modal-dialog" role="document">
     <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
         <div class="modal-body mt20">
             <form class="form-horizontal">
-                <input type="text" ng-model="solution.name" />
-                <input type="submit" ng-click="add()" />
+            	<div class="form-group">
+            		<label class="control-label col-sm-3">解决方案名称：</label>
+	                <input type="text" ng-model="solution.name" class="form-control col-sm-5"/>
+	                <input type="submit" ng-click="add()" class="btn btn-success btn-sm ml10"/>
+            	</div>
             </form>
         </div>
     </div>
