--- a/admin/src/main/resources/templates/subject/solution/list.html
+++ b/admin/src/main/resources/templates/subject/solution/list.html
@@ -11,11 +11,13 @@
         <tbody>
             <tr ng-repeat="item in items">
                 <td><a href="#/subjectDetail/{{item.id}}">{{$index+1}}</a></td>
-                <td><input type="text" ng-model="item.name"/></td>
-                <td><button ng-click="update(item)">update</button></td>
+                <td><input type="text" ng-model="item.name" class="form-control w160"/></td>
+                <td><button ng-click="update(item)" class="btn btn-primary btn-sm">修改</button></td>
             </tr>
         </tbody>
-        <input ng-model="solution.name"></input>
-        <button ng-click="add()">添加</button>
+        <div class="form-group">
+	        <input ng-model="solution.name" class="form-control col-md-2"></input>
+	        <button ng-click="add()" class="btn btn-success btn-sm ml10">添加</button>        
+        </div>
     </table>
 </div>
