change subject detail to modal

--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -91,7 +91,7 @@
                         拒绝
                     </button>
                     <button class="btn btn-defalut" type="button" ng-click="addSolution()">
-                        relate
+                        关联主题
                     </button>
                 </div>
             </form>
