add date&productstatus filter fix product search bug

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
+    <script src="/js/module/filter.js"></script>
 </head>
 
 <body ng-app="app">
