--- a/admin/src/main/resources/templates/product/list.html
+++ b/admin/src/main/resources/templates/product/list.html
@@ -4,13 +4,6 @@
             <a class="btn btn-success btn-sm">导入</a>
         </div>
         <div class="form-group company-select">
-            <select>
-                <option>产品类型</option>
-                <option>111</option>
-                <option>2222</option>
-            </select>
-        </div>
-        <div class="form-group company-select">
             <select ng-model="opt.firstCategory" ng-change="findByParent(opt.firstCategory)" ng-options="c.id as c.name for c in firstCategories">
             </select>
         </div>
@@ -19,11 +12,11 @@
             </select>
         </div>
         <div class="form-group company-select">
-            <select ng-model="opt.status">
-                <option value="1">已下架</option>
-                <option value="2">已上架</option>
-                <option value="3">审核中</option>
-                <option value="4">未通过</option>
+            <select ng-model="opt.state">
+                <option value="down">已下架</option>
+                <option value="up">已上架</option>
+                <option value="examine">审核中</option>
+                <option value="not">未通过</option>
             </select>
         </div>
         <div class="form-group company-select">
@@ -49,8 +42,8 @@
                 <td>{{item.secondCategoryName}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
-                <td>{{item.createdTime}}</td>
-                <td>已上架</td>
+                <td>{{item.createdTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{item.stateName | stateFilter}}</td>
             </tr>
         </tbody>
     </table>
