--- a/admin/src/main/resources/templates/user/userDetail.html
+++ b/admin/src/main/resources/templates/user/userDetail.html
@@ -1,9 +1,7 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
         <div class="modal-body pl100">
+            <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000">{{alert.msg}}</alert>
             <form class="form-horizontal w400">
                 <div class="row">
                     <div class="form-group">
