--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -27,9 +27,11 @@
                 <td ng-click="view(item)">{{$index+1}}</td>
                 <td>{{item.categoryName}}</td>
                 <td>{{item.title}}</td>
-                <td>{{item.state}}</td>
-                <td>2015-07-28</td>
-                <td><a class="btn btn-primary btn-sm">发布</a><a class="btn btn-primary btn-sm">修改</a></td>
+                <td>{{item.state|activeFilter}}</td>
+                <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>
+                	<a class="btn btn-primary btn-sm" ng-click="updateState(item)">{{item.state|reverseActiveFilter}}</a>
+                </td>
             </tr>
         </tbody>
     </table>
