--- a/admin/src/main/resources/templates/category/category.html
+++ b/admin/src/main/resources/templates/category/category.html
@@ -2,7 +2,7 @@
     <div class="contentpanel">    	
         <form class="form-inline">
             <div class="form-group">
-                <a class="btn btn-success btn-sm" ui-sref="categoryAdd">添加</a>
+                <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#brandModal" ng-click="create()">添加</a>
             </div>
         </form>
         <h4>仪器</h4>
@@ -16,7 +16,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="item in yq">
-                    <td ng-click="view(item)"><a href="#/category2/{{item.id}}">{{$index+1}}</a></td>
+                    <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
                         <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
@@ -37,7 +37,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="item in sj">
-                    <td ng-click="view(item)">{{$index+1}}</td>
+                    <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
                         <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
@@ -58,7 +58,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="item in hc">
-                    <td ng-click="view(item)">{{$index+1}}</td>
+                    <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
                         <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
@@ -79,7 +79,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="item in fw">
-                    <td ng-click="view(item)">{{$index+1}}</td>
+                    <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
                         <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
