--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -97,8 +97,9 @@
 								</div>
 								<div class="form-group">
 									<label>期望到货日期</label> 
-									<input th:if="${buy.arrivalTime!=null}" class="form-control datepicker" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}" id="arrivalTime" name="arrivaTime" type="text" />
-									<input th:unless="${buy.arrivalTime!=null}" class="form-control datepicker" id="arrivalTime" name="arrivaTime" type="text" />
+									<input th:if="${buy.arrivalTime!=null}" class="form-control datepicker" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}" id="arrivalTime" name="arrivalTime" type="text" />
+									<input th:unless="${buy.arrivalTime!=null}" class="form-control datepicker" id="arrivalTime" name="arrivalTime" type="text" />
+									<i class="error" th:if="${#fields.hasErrors('arrivalTime')}" th:errors="*{arrivalTime}">必填</i>
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 								<button class="btn green mauto">生成完毕</button>
